{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 23,
  "lineage": "24b78fbb-2b5a-b3f6-9b1b-b06070ca9d90",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:internet-gateway/igw-04ab150afa22c842f",
            "id": "igw-04ab150afa22c842f",
            "owner_id": "248949156039",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-igw",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-igw",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            },
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "igw-04ab150afa22c842f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:route-table/rtb-08cdc5f1c5b3bf69d",
            "id": "rtb-08cdc5f1c5b3bf69d",
            "owner_id": "248949156039",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-private-rt",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-private-rt",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "rtb-08cdc5f1c5b3bf69d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:route-table/rtb-09104b0e8c300a29b",
            "id": "rtb-09104b0e8c300a29b",
            "owner_id": "248949156039",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ab150afa22c842f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-public-rt",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-public-rt",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "rtb-09104b0e8c300a29b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd3bca241664e5e",
            "region": "eu-central-1",
            "route_table_id": "rtb-08cdc5f1c5b3bf69d",
            "subnet_id": "subnet-09516a2195e21dfc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "rtbassoc-01bd3bca241664e5e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f027f18726a8f01",
            "region": "eu-central-1",
            "route_table_id": "rtb-08cdc5f1c5b3bf69d",
            "subnet_id": "subnet-092b6de1c3ec13e3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "rtbassoc-03f027f18726a8f01",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a1feb6da90a6eb6",
            "region": "eu-central-1",
            "route_table_id": "rtb-09104b0e8c300a29b",
            "subnet_id": "subnet-0184c60400b36a702"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "rtbassoc-04a1feb6da90a6eb6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a94680328b33909a",
            "region": "eu-central-1",
            "route_table_id": "rtb-09104b0e8c300a29b",
            "subnet_id": "subnet-0d487747aebf92368"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "rtbassoc-0a94680328b33909a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:subnet/subnet-09516a2195e21dfc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09516a2195e21dfc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248949156039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-private-1",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-private-1",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "subnet-09516a2195e21dfc6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:subnet/subnet-092b6de1c3ec13e3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092b6de1c3ec13e3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248949156039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-private-2",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-private-2",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "subnet-092b6de1c3ec13e3d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:subnet/subnet-0184c60400b36a702",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0184c60400b36a702",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248949156039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-public-1",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-public-1",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "public"
            },
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "subnet-0184c60400b36a702",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:subnet/subnet-0d487747aebf92368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d487747aebf92368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248949156039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-public-2",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-public-2",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "public"
            },
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "subnet-0d487747aebf92368",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:vpc/vpc-0809ad3a9c40d899c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0f59ac3ae259df1ea",
            "default_route_table_id": "rtb-059245b16767af4b1",
            "default_security_group_id": "sg-067caf7649f91e65f",
            "dhcp_options_id": "dopt-09bcee3acc246631e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0809ad3a9c40d899c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059245b16767af4b1",
            "owner_id": "248949156039",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-vpc",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-vpc",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "vpc-0809ad3a9c40d899c",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group/sg-0619402b1a2952ed3",
            "description": "Security group for the public application load balancer",
            "egress": [],
            "id": "sg-0619402b1a2952ed3",
            "ingress": [],
            "name": "task-tracker-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "248949156039",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-alb-sg",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-alb-sg",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sg-0619402b1a2952ed3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group/sg-09ddcd128b74d7553",
            "description": "Security group for backend application workloads",
            "egress": [],
            "id": "sg-09ddcd128b74d7553",
            "ingress": [],
            "name": "task-tracker-dev-app-sg",
            "name_prefix": "",
            "owner_id": "248949156039",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-app-sg",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-app-sg",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sg-09ddcd128b74d7553",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group/sg-03949cbe759c00f1f",
            "description": "Security group for PostgreSQL database",
            "egress": [],
            "id": "sg-03949cbe759c00f1f",
            "ingress": [],
            "name": "task-tracker-dev-db-sg",
            "name_prefix": "",
            "owner_id": "248949156039",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "task-tracker-dev-db-sg",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "task-tracker-dev-db-sg",
              "NamePrefix": "task-tracker-dev",
              "Project": "task-tracker",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0809ad3a9c40d899c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sg-03949cbe759c00f1f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group-rule/sgr-0d60a2cfcc038e5ea",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to reach app on app port",
            "from_port": 4000,
            "id": "sgr-0d60a2cfcc038e5ea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09ddcd128b74d7553",
            "region": "eu-central-1",
            "security_group_id": "sg-0619402b1a2952ed3",
            "security_group_rule_id": "sgr-0d60a2cfcc038e5ea",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "task-tracker"
            },
            "to_port": 4000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sgr-0d60a2cfcc038e5ea",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group-rule/sgr-040856dce24e212be",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow app to reach PostgreSQL",
            "from_port": 5432,
            "id": "sgr-040856dce24e212be",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03949cbe759c00f1f",
            "region": "eu-central-1",
            "security_group_id": "sg-09ddcd128b74d7553",
            "security_group_rule_id": "sgr-040856dce24e212be",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "task-tracker"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sgr-040856dce24e212be",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group-rule/sgr-0abaa29e2cb7de289",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from the internet",
            "from_port": 80,
            "id": "sgr-0abaa29e2cb7de289",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0619402b1a2952ed3",
            "security_group_rule_id": "sgr-0abaa29e2cb7de289",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "task-tracker"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sgr-0abaa29e2cb7de289",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group-rule/sgr-0953e444e62ff4dc4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from the internet",
            "from_port": 443,
            "id": "sgr-0953e444e62ff4dc4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0619402b1a2952ed3",
            "security_group_rule_id": "sgr-0953e444e62ff4dc4",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "task-tracker"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sgr-0953e444e62ff4dc4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group-rule/sgr-0bd2d009055d7f5aa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to reach the app",
            "from_port": 4000,
            "id": "sgr-0bd2d009055d7f5aa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0619402b1a2952ed3",
            "region": "eu-central-1",
            "security_group_id": "sg-09ddcd128b74d7553",
            "security_group_rule_id": "sgr-0bd2d009055d7f5aa",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "task-tracker"
            },
            "to_port": 4000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sgr-0bd2d009055d7f5aa",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:248949156039:security-group-rule/sgr-09903c938687034ee",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow app to reach PostgreSQL",
            "from_port": 5432,
            "id": "sgr-09903c938687034ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09ddcd128b74d7553",
            "region": "eu-central-1",
            "security_group_id": "sg-03949cbe759c00f1f",
            "security_group_rule_id": "sgr-09903c938687034ee",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "task-tracker"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248949156039",
            "id": "sgr-09903c938687034ee",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db"
          ]
        }
      ]
    }
  ]
}